--- a/index.html
+++ b/index.html
@@ -289,49 +289,48 @@
             <div class="swiper-slide">
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
-                  <a href="#" target="_blank">
+                  <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank">
                     <img src="img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C"
                       class="es-cross__img" />
                   </a>
                 </div>
                 <p class="es-cross__text">Rewitalizujący płyn micelarny</p>
-                <a href="#" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
+                <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
-                  <a href="#" target="_blank">
+                  <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank">
                     <img src="img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
                   </a>
                 </div>
                 <p class="es-cross__text">Serum na przebarwienia</p>
-                <a href="#" target="_blank" class="es-cross__link es-cross__link--2">Sprawdź</a>
+                <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank" class="es-cross__link es-cross__link--2">Sprawdź</a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
-                  <a href="#es-garnier">
+                  <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225">
                     <img src="img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc"
                       class="es-cross__img" />
                   </a>
                 </div>
                 <p class="es-cross__text">Serum na noc</p>
-                <a href="#es-garnier" class="es-cross__link es-cross__link--3">Sprawdź</a>
+                <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225" class="es-cross__link es-cross__link--3">Sprawdź</a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
-                  <a href="#es-garnier">
+                  <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224">
                     <img src="img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
                       class="es-cross__img" />
                   </a>
                 </div>
                 <p class="es-cross__text">Rozświetlający krem pod oczy</p>
-
-                <a href="#es-garnier" class="es-cross__link">Sprawdź</a>
+                <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224" class="es-cross__link">Sprawdź</a>
               </div>
             </div>
           </div>
@@ -341,40 +340,40 @@
         <div class="es-cross__container">
           <div class="es-cross__product">
             <div class="es-cross__packshot">
-              <a href="#" target="_blank">
+              <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank">
                 <img src="img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Rewitalizujący płyn micelarny</p>
-            <a href="#" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
+            <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
           </div>
           <div class="es-cross__product">
             <div class="es-cross__packshot">
-              <a href="#" target="_blank">
+              <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank">
                 <img src="img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Serum na przebarwienia</p>
-            <a href="#" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
+            <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
           </div>
           <div class="es-cross__product">
             <div class="es-cross__packshot">
-              <a href="#" target="_blank">
+              <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225" target="_blank">
                 <img src="img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Serum na noc</p>
-            <a href="#" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
+            <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
           </div>
           <div class="es-cross__product">
             <div class="es-cross__packshot">
-              <a href="#" target="_blank">
+              <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224" target="_blank">
                 <img src="img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
                   class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Rozświetlający krem pod oczy</p>
-            <a href="#" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
+            <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224" target="_blank" class="es-cross__link es-cross__link--1">Sprawdź</a>
           </div>
         </div>
       </div>
