--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="es-kv__image">
-            <img src="img/kv-right.png" alt="" class="es-kv__img" />
+            <img src="./img/kv-right.png" alt="" class="es-kv__img" />
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
 
       <div class="es-intro__container">
         <div class="es-intro__packshot">
-          <img src="img/intro-left.png" alt="" id="es-intro__left" />
+          <img src="./img/intro-left.png" alt="" id="es-intro__left" />
         </div>
 
         <div class="es-intro__content es-intro__content--2">
@@ -58,7 +58,7 @@
               <p>drobnym liniom</p>
             </div>
             <div class="es-intro__image">
-              <img src="img/intro-right.png" alt="skóra pod oczami przed i po stosowaniu" class="es-intro__right" />
+              <img src="./img/intro-right.png" alt="skóra pod oczami przed i po stosowaniu" class="es-intro__right" />
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <h3 class="es-intro__intro-subtitle">pierwsze efekty juz po 1 nocy!</h3>
         </div>
         <div class="es-intro__packshot es-intro__content--4">
-          <img src="img/intro-3.png" alt="" class="es-intro__img" />
+          <img src="./img/intro-3.png" alt="" class="es-intro__img" />
         </div>
       </div>
     </div>
@@ -290,7 +290,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank">
-                    <img src="img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C"
+                    <img src="./img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C"
                       class="es-cross__img" />
                   </a>
                 </div>
@@ -302,7 +302,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank">
-                    <img src="img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
+                    <img src="./img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
                   </a>
                 </div>
                 <p class="es-cross__text">Serum na przebarwienia</p>
@@ -313,7 +313,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225">
-                    <img src="img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc"
+                    <img src="./img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc"
                       class="es-cross__img" />
                   </a>
                 </div>
@@ -325,7 +325,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224">
-                    <img src="img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
+                    <img src="./img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
                       class="es-cross__img" />
                   </a>
                 </div>
@@ -341,7 +341,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank">
-                <img src="img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C" class="es-cross__img" />
+                <img src="./img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Rewitalizujący płyn micelarny</p>
@@ -350,7 +350,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank">
-                <img src="img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
+                <img src="./img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Serum na przebarwienia</p>
@@ -359,7 +359,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225" target="_blank">
-                <img src="img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc" class="es-cross__img" />
+                <img src="./img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Serum na noc</p>
@@ -368,7 +368,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224" target="_blank">
-                <img src="img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
+                <img src="./img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
                   class="es-cross__img" />
               </a>
             </div>
@@ -381,17 +381,17 @@
 
     <div class="es-footer">
       <div class="es-footer__logo">
-        <img src="img/logo-footer.png" alt="Logo Garnier" class="es-footer__img" />
+        <img src="./img/logo-footer.png" alt="Logo Garnier" class="es-footer__img" />
       </div>
       <div class="es-footer__wrapper">
         <div class="es-footer__icon">
-          <img src="img/footer-1.png" alt="Logo Cruelty Free International" class="es-footer__img" />
+          <img src="./img/footer-1.png" alt="Logo Cruelty Free International" class="es-footer__img" />
         </div>
         <div class="es-footer__icon">
-          <img src="img/footer-2.png" alt="Testowany na każdym odcieniu i rodzaju skóry" class="es-footer__img" />
+          <img src="./img/footer-2.png" alt="Testowany na każdym odcieniu i rodzaju skóry" class="es-footer__img" />
         </div>
         <div class="es-footer__icon">
-          <img src="img/footer-3.png" alt="Vegańska formuła. Nie zawiera składników pochodzenia zwierzęcego"
+          <img src="./img/footer-3.png" alt="Vegańska formuła. Nie zawiera składników pochodzenia zwierzęcego"
             class="es-footer__img" />
         </div>
       </div>
