change aceess paths and folder structure

--- a/3600542541640/3600542541640.html
+++ b/3600542541640/3600542541640.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/css/style.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div class="es-kv">
       <div class="es-kv__container">
         <div class="es-kv__photo">
-          <img src="./img/kv-left.png" alt="" class="es-kv__img es-kv__img--photo" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/kv-left.png" alt="" class="es-kv__img es-kv__img--photo" />
         </div>
         <div class="es-kv__content">
           <div class="es-kv__text">
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="es-kv__image">
-            <img src="./img/kv-right.png" alt="" class="es-kv__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/kv-right.png" alt="" class="es-kv__img" />
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
 
       <div class="es-intro__container">
         <div class="es-intro__packshot">
-          <img src="./img/intro-left.png" alt="" id="es-intro__left" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/intro-left.png" alt="" id="es-intro__left" />
         </div>
 
         <div class="es-intro__content es-intro__content--2">
@@ -58,7 +58,7 @@
               <p>drobnym liniom</p>
             </div>
             <div class="es-intro__image">
-              <img src="./img/intro-right.png" alt="skóra pod oczami przed i po stosowaniu" class="es-intro__right" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/intro-right.png" alt="skóra pod oczami przed i po stosowaniu" class="es-intro__right" />
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <h3 class="es-intro__intro-subtitle">pierwsze efekty juz po 1 nocy!</h3>
         </div>
         <div class="es-intro__packshot es-intro__content--4">
-          <img src="./img/intro-3.png" alt="" class="es-intro__img" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/intro-3.png" alt="" class="es-intro__img" />
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
     <div class="es-benefits">
 
       <div class="es-benefits__packshot">
-        <img src="./img/packshot-benefits.jpg" alt="Kapsułka w witaminą C i plasterkiem cytryny"
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/packshot-benefits.jpg" alt="Kapsułka w witaminą C i plasterkiem cytryny"
           class="es-benefits__img" />
       </div>
 
@@ -112,13 +112,13 @@
       <div class="es-ingredients__container">
         <div class="es-ingredients__content">
           <div class="es-ingredients__packshot">
-            <img src="./img/packshot-active.png" alt="" class="es-ingredients__img es-ingredients__img-packshot" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/packshot-active.png" alt="" class="es-ingredients__img es-ingredients__img-packshot" />
           </div>
         </div>
         <div class="es-ingredients__cards">
           <div class="es-ingredients__single">
             <div class="es-ingredients__icon">
-              <img src="./img/icon-1.png" alt="" class="es-ingredients__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/icon-1.png" alt="" class="es-ingredients__img" />
             </div>
             <p class="es-ingredients__text">
               <span>Formuła</span>
@@ -128,7 +128,7 @@
           </div>
           <div class="es-ingredients__single">
             <div class="es-ingredients__icon">
-              <img src="./img/icon-2.png" alt="" class="es-ingredients__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/icon-2.png" alt="" class="es-ingredients__img" />
             </div>
             <p class="es-ingredients__text">
               <span>Działanie</span> Pierwsze efekty <strong>już po 1 nocy! Już po 3 nocach</strong> widocznie
@@ -137,7 +137,7 @@
           </div>
           <div class="es-ingredients__single">
             <div class="es-ingredients__icon">
-              <img src="./img/icon-3.png" alt="" class="es-ingredients__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/icon-3.png" alt="" class="es-ingredients__img" />
             </div>
             <p class="es-ingredients__text">
               <span>Składniki</span>
@@ -146,7 +146,7 @@
           </div>
           <div class="es-ingredients__single">
             <div class="es-ingredients__icon">
-              <img src="./img/icon-4.png" alt="" class="es-ingredients__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/icon-4.png" alt="" class="es-ingredients__img" />
             </div>
             <p class="es-ingredients__text">
               <span>Opakowanie</span>
@@ -169,21 +169,21 @@
 
           <div class="es-results__single">
             <div class="es-results__number">
-              <img src="./img/check-icon.png" alt="">
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/check-icon.png" alt="">
             </div>
             <p>Twoja skóra jest matowa, pozbawiona blasku</p>
           </div>
 
           <div class="es-results__single">
             <div class="es-results__number">
-              <img src="./img/check-icon.png" alt="">
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/check-icon.png" alt="">
             </div>
             <p>Twoja skóra ma nierówny koloryt</p>
           </div>
 
           <div class="es-results__single">
             <div class="es-results__number">
-              <img src="./img/check-icon.png" alt="">
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/check-icon.png" alt="">
             </div>
             <p>Na Twojej skórze pojawiły się pierwsze drobne linie</p>
           </div>
@@ -218,7 +218,7 @@
       <div class="es-apply__container">
         <div class="es-apply__step">
           <div class="es-apply__photo">
-            <img src="./img/step-1.png" alt="Kobieta nakraplająca serum" class="es-apply__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/step-1.png" alt="Kobieta nakraplająca serum" class="es-apply__img" />
           </div>
           <p class="es-apply__text">Krok 1</p>
           <p class="es-apply__desc">
@@ -227,7 +227,7 @@
         </div>
         <div class="es-apply__step">
           <div class="es-apply__photo">
-            <img src="./img/step-2.png" alt="Kobieta wmasowuje serum w okolice oczu" class="es-apply__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/step-2.png" alt="Kobieta wmasowuje serum w okolice oczu" class="es-apply__img" />
           </div>
           <p class="es-apply__text">Krok 2</p>
           <p class="es-apply__desc">
@@ -236,7 +236,7 @@
         </div>
         <div class="es-apply__step">
           <div class="es-apply__photo">
-            <img src="./img/step-3.png" alt="Dwie zadowolone kobiety" class="es-apply__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/step-3.png" alt="Dwie zadowolone kobiety" class="es-apply__img" />
           </div>
           <p class="es-apply__text">Krok 3</p>
           <p class="es-apply__desc">
@@ -249,14 +249,14 @@
     <div class="es-info">
       <div class="es-info__container">
         <div class="es-info__photo">
-          <img src="./img/bio.png" alt="" class="es-info__img" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/bio.png" alt="" class="es-info__img" />
         </div>
         <div class="es-info__content">
           <div class="es-info__wrapper">
             <h3 class="es-info__title">serum eko odpowiedzialne!</h3>
             <div class="es-info__item">
               <div class="es-info__icon es-info__icon--1">
-                <img src="./img/icon-info-1.png" alt="" class="es-info__img" />
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/icon-info-1.png" alt="" class="es-info__img" />
               </div>
               <p class="es-info__text">
                 Butelka w 25% została wyprodukowana ze szkła z recyklingu. Produkt został wyprodukowany w fabryce
@@ -265,7 +265,7 @@
             </div>
             <div class="es-info__item">
               <div class="es-info__icon es-info__icon--3">
-                <img src="./img/icon-info-3.png" alt="" class="es-info__img" />
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/icon-info-3.png" alt="" class="es-info__img" />
               </div>
               <p class="es-info__text">
                 Marka Garnier została oficjalnie zatwierdzona przez
@@ -290,7 +290,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank">
-                    <img src="./img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C"
+                    <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C"
                       class="es-cross__img" />
                   </a>
                 </div>
@@ -302,7 +302,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank">
-                    <img src="./img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
+                    <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
                   </a>
                 </div>
                 <p class="es-cross__text">Serum na przebarwienia</p>
@@ -313,7 +313,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225">
-                    <img src="./img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc"
+                    <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc"
                       class="es-cross__img" />
                   </a>
                 </div>
@@ -325,7 +325,7 @@
               <div class="es-cross__product">
                 <div class="es-cross__packshot">
                   <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224">
-                    <img src="./img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
+                    <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
                       class="es-cross__img" />
                   </a>
                 </div>
@@ -341,7 +341,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Plyny-micelarne/Garnier-plyn-micelarny-z-witamina-C-skora-matowa-i-zmeczona-400-ml,390737,8770" target="_blank">
-                <img src="./img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C" class="es-cross__img" />
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-1.png" alt="Opakowanie Garnier płyn micelarny z witaminą C" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Rewitalizujący płyn micelarny</p>
@@ -350,7 +350,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Vitamin-C-serum-do-twarzy-na-przebarwienia-z-witamina-C-30-ml,390741,9225" target="_blank">
-                <img src="./img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-2.png" alt="Opakowanie Garnier serum na przebarwienia" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Serum na przebarwienia</p>
@@ -359,7 +359,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Serum/Garnier-Skin-Naturals-Vitamin-C-serum-do-twarzy-rozswietlajace-na-noc-30-ml,419476,9225" target="_blank">
-                <img src="./img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc" class="es-cross__img" />
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-3.png" alt="Opakowanie Garnier rozświetlające serum na noc" class="es-cross__img" />
               </a>
             </div>
             <p class="es-cross__text">Serum na noc</p>
@@ -368,7 +368,7 @@
           <div class="es-cross__product">
             <div class="es-cross__packshot">
               <a href="https://www.rossmann.pl/Produkt/Kremy-pod-oczy/Garnier-Skin-Naturals-Vitamin-C-krem-pod-oczy-rozswietlajacy-15-ml,419475,9224" target="_blank">
-                <img src="./img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/cross-4.png" alt="Opakowanie Garnier rozświetlający krem pod oczy z witaminą C"
                   class="es-cross__img" />
               </a>
             </div>
@@ -381,23 +381,23 @@
 
     <div class="es-footer">
       <div class="es-footer__logo">
-        <img src="./img/logo-footer.png" alt="Logo Garnier" class="es-footer__img" />
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/logo-footer.png" alt="Logo Garnier" class="es-footer__img" />
       </div>
       <div class="es-footer__wrapper">
         <div class="es-footer__icon">
-          <img src="./img/footer-1.png" alt="Logo Cruelty Free International" class="es-footer__img" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/footer-1.png" alt="Logo Cruelty Free International" class="es-footer__img" />
         </div>
         <div class="es-footer__icon">
-          <img src="./img/footer-2.png" alt="Testowany na każdym odcieniu i rodzaju skóry" class="es-footer__img" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/footer-2.png" alt="Testowany na każdym odcieniu i rodzaju skóry" class="es-footer__img" />
         </div>
         <div class="es-footer__icon">
-          <img src="./img/footer-3.png" alt="Vegańska formuła. Nie zawiera składników pochodzenia zwierzęcego"
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/img/footer-3.png" alt="Vegańska formuła. Nie zawiera składników pochodzenia zwierzęcego"
             class="es-footer__img" />
         </div>
       </div>
     </div>
   </div>
-  <script src="slider.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/garnier/3600542541640/slider.js"></script>
   <script>
     var swiper = new Swiper(".swiper", {
       loop: true,
